sandbox/output
FtsTranslator.java:5: error: ')' expected
        if (keywords.startsWith("*") {
                                    ^
1 error
